--- a/ui/storefront/Views/Shared/_Layout.cshtml
+++ b/ui/storefront/Views/Shared/_Layout.cshtml
@@ -52,13 +52,19 @@
             <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
                 <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white">
                     <li>
-                        <a asp-area="" asp-controller="Home" asp-action="Index" class="block py-2 px-3 bg-blue-700 rounded md:bg-transparent md:p-0 @(ViewContext.RouteData.Values["controller"]!.Equals("Home") ? "text-blue-700" : "text-gray-900")" aria-current="page">Home</a>
+                        <a asp-area="" asp-controller="Home" asp-action="Index" class="block py-2 px-3 bg-blue-700 rounded md:bg-transparent md:p-0 @(ViewContext.RouteData.Values["controller"]!.Equals("Home") ? "text-blue-700" : "text-gray-900")" aria-current="page">
+                            Home
+                        </a>
                     </li>
                     <li>
-                        <a asp-area="Product" asp-controller="Product" asp-action="Index" class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 @(ViewContext.RouteData.Values["controller"]!.Equals("Product") ? "text-blue-700" : "text-gray-900")">Products</a>
+                        <a asp-area="Product" asp-controller="Product" asp-action="Index" asp-route-page="1" class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 @(ViewContext.RouteData.Values["controller"]!.Equals("Product") ? "text-blue-700" : "text-gray-900")">
+                            Products
+                        </a>
                     </li>
                     <li>
-                        <a asp-area="" asp-controller="About" asp-action="Index" class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 @(ViewContext.RouteData.Values["controller"]!.Equals("About") ? "text-blue-700" : "text-gray-900")">About</a>
+                        <a asp-area="" asp-controller="About" asp-action="Index" class="block py-2 px-3 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 @(ViewContext.RouteData.Values["controller"]!.Equals("About") ? "text-blue-700" : "text-gray-900")">
+                            About
+                        </a>
                     </li>
                 </ul>
             </div>
