--- a/ui/storefront/Areas/Product/Views/Product/Index.cshtml
+++ b/ui/storefront/Areas/Product/Views/Product/Index.cshtml
@@ -21,8 +21,8 @@
                                 <button type="button" class="flex w-full items-center justify-between bg-white py-3 text-sm text-gray-400 hover:text-gray-500" aria-controls="filter-section-1" aria-expanded="false">
                                     <span class="font-medium text-gray-900">Category</span>
                                     <span class="ml-6 flex items-center">
-                                        <img loading="lazy" src="~/imgs/product/plus.svg" class="h-5 w-5" alt="plus"/>
-                                        <img loading="lazy" src="~/imgs/product/minus.svg" class="h-5 w-5 hidden" alt="minus"/>
+                                        <img asp-append-version="true" loading="lazy" src="~/imgs/product/plus.svg" class="h-5 w-5" alt="plus"/>
+                                        <img asp-append-version="true" loading="lazy" src="~/imgs/product/minus.svg" class="h-5 w-5 hidden" alt="minus"/>
                                     </span>
                                 </button>
                             </h3>
