--- a/ui/storefront/Areas/Product/Views/Shared/_FilterPartial.cshtml
+++ b/ui/storefront/Areas/Product/Views/Shared/_FilterPartial.cshtml
@@ -3,7 +3,7 @@
         <div>
             <button id="sort-btn" type="button" class="group inline-flex justify-center text-sm font-medium text-gray-700 hover:text-gray-900" aria-expanded="false" aria-haspopup="true">
                 Sort
-                <img loading="lazy" class="-mr-1 ml-1 h-5 w-5 flex-shrink-0 text-gray-400 group-hover:text-gray-500" src="/imgs/filter/arrow-down.svg" alt="Sort"/>
+                <img asp-append-version="true" loading="lazy" class="-mr-1 ml-1 h-5 w-5 flex-shrink-0 text-gray-400 group-hover:text-gray-500" src="~/imgs/filter/arrow-down.svg" alt="Sort"/>
             </button>
         </div>
 
@@ -19,6 +19,6 @@
 
     <button type="button" class="-m-2 ml-4 p-2 text-gray-400 hover:text-gray-500 sm:ml-6 lg:hidden">
         <span class="sr-only">Filters</span>
-        <img loading="lazy" class="h-5 w-5" src="/imgs/filter/filter.svg" alt="Filter"/>
+        <img asp-append-version="true" loading="lazy" class="h-5 w-5" src="~/imgs/filter/filter.svg" alt="Filter"/>
     </button>
 </div>
