--- a/ui/storefront/Views/About/Index.cshtml
+++ b/ui/storefront/Views/About/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="xl:w-auto md:flex hidden flex-col space-y-6 xl:space-y-0 xl:flex-row justify-center items-center">
         <div class="flex justify-between w-full items-center space-x-6 xl:space-x-8">
             <div class="flex justify-center items-center">
-                <img loading="lazy" src="/imgs/about/heather-ford.png" alt="shoes and clothes"/>
+                <img loading="lazy" src="~/imgs/about/heather-ford.png" alt="shoes and clothes" asp-append-version="true"/>
             </div>
             <div class="flex flex-col justify-between xl:mt-0 items-center space-y-6 xl:space-y-8">
                 <div class="flex flex-col xl:flex-row justify-between h-full xl:justify-center items-center space-y-8 xl:space-y-0 xl:space-x-8">
@@ -16,8 +16,8 @@
                         <a href="https://github.com/foxminchan" class="focus:outline-none mt-4 focus:underline text-base leading-4 hover:underline text-center text-gray-800">@@RookieShop</a>
                     </div>
                     <div>
-                        <img class="hidden xl:block" src="/imgs/about/nordwood-themes.png" alt="jewellery"/>
-                        <img class="xl:hidden" src="/imgs/about/nordwood-themes-unsplash.png" alt="shoes and clothes"/>
+                        <img asp-append-version="true" class="hidden xl:block" src="~/imgs/about/nordwood-themes.png" alt="jewellery"/>
+                        <img asp-append-version="true" class="xl:hidden" src="~/imgs/about/nordwood-themes-unsplash.png" alt="shoes and clothes"/>
                     </div>
                 </div>
                 <div class="hidden xl:flex flex-row justify-center items-center space-x-6 xl:space-x-8">
@@ -32,10 +32,10 @@
         </div>
         <div class="xl:hidden flex flex-row justify-between space-x-6 xl:space-x-8">
             <div>
-                <img loading="lazy" src="/imgs/about/camilla-carvalho.png" alt="jewellery"/>
+                <img loading="lazy" src="~/imgs/about/camilla-carvalho.png" alt="jewellery" asp-append-version="true"/>
             </div>
             <div>
-                <img loading="lazy" src="/imgs/about/jonathan-francisca.png" alt="watch"/>
+                <img loading="lazy" src="~/imgs/about/jonathan-francisca.png" alt="watch" asp-append-version="true"/>
             </div>
         </div>
     </div>
@@ -47,10 +47,10 @@
             <a href="https://github.com/foxminchan" class="focus:outline-none mt-4 focus:underline text-base leading-4 hover:underline text-center text-gray-800">@@RookieShop</a>
         </div>
         <div class="mt-8 flex flex-col justify-center space-y-4">
-            <img loading="lazy" src="/imgs/about/heather-ford.png" alt="shoes and clothes"/>
-            <img loading="lazy" src="/imgs/about/nordwood-themes-unsplash.png" alt="shoes and clothes"/>
-            <img loading="lazy" src="/imgs/about/camilla-carvalho.png" alt="jewellery"/>
-            <img loading="lazy" src="/imgs/about/jonathan-francisca.png" alt="watch"/>
+            <img asp-append-version="true" loading="lazy" src="~/imgs/about/heather-ford.png" alt="shoes and clothes"/>
+            <img asp-append-version="true" loading="lazy" src="~/imgs/about/nordwood-themes-unsplash.png" alt="shoes and clothes"/>
+            <img asp-append-version="true" loading="lazy" src="~/imgs/about/camilla-carvalho.png" alt="jewellery"/>
+            <img asp-append-version="true" loading="lazy" src="~/imgs/about/jonathan-francisca.png" alt="watch"/>
         </div>
     </div>
 </div>
