--- a/ui/storefront/Views/Shared/Components/BasketButton/Default.cshtml
+++ b/ui/storefront/Views/Shared/Components/BasketButton/Default.cshtml
@@ -9,7 +9,7 @@
                     <p class="flex h-2 w-2 items-center justify-center rounded-full bg-red-500 p-2 text-xs text-white">@Model</p>
                 </div>
             }
-            <img loading="lazy" class="mt-2 h-6 w-6" src="~/imgs/home/cart.svg" alt="Cart"/>
+            <img loading="lazy" class="mt-2 h-6 w-6" src="~/imgs/home/cart.svg" alt="Cart" asp-append-version="true"/>
         </div>
     </a>
 </li>
