--- a/ui/storefront/Views/Shared/Partials/Home/_HeroPartial.cshtml
+++ b/ui/storefront/Views/Shared/Partials/Home/_HeroPartial.cshtml
@@ -12,29 +12,29 @@
                             <div class="flex items-center space-x-6 lg:space-x-8">
                                 <div class="grid flex-shrink-0 grid-cols-1 gap-y-6 lg:gap-y-8">
                                     <div class="h-64 w-44 overflow-hidden rounded-lg sm:opacity-0 lg:opacity-100">
-                                        <img loading="lazy" src="/imgs/home/home-page-01.jpg" alt="Home Product 1" class="h-full w-full object-cover object-center">
+                                        <img loading="lazy" src="~/imgs/home/home-page-01.jpg" alt="Home Product 1" class="h-full w-full object-cover object-center" asp-append-version="true"/>
                                     </div>
                                     <div class="h-64 w-44 overflow-hidden rounded-lg">
-                                        <img loading="lazy" src="/imgs/home/home-page-02.jpg" alt="Home Product 2" class="h-full w-full object-cover object-center">
-                                    </div>
-                                </div>
-                                <div class="grid flex-shrink-0 grid-cols-1 gap-y-6 lg:gap-y-8">
-                                    <div class="h-64 w-44 overflow-hidden rounded-lg">
-                                        <img loading="lazy" src="/imgs/home/home-page-03.jpg" alt="Home Product 3" class="h-full w-full object-cover object-center">
-                                    </div>
-                                    <div class="h-64 w-44 overflow-hidden rounded-lg">
-                                        <img loading="lazy" src="/imgs/home/home-page-04.jpg" alt="Home Product 4" class="h-full w-full object-cover object-center">
-                                    </div>
-                                    <div class="h-64 w-44 overflow-hidden rounded-lg">
-                                        <img loading="lazy" src="/imgs/home/home-page-05.jpg" alt="Home Product 5" class="h-full w-full object-cover object-center">
+                                        <img loading="lazy" src="~/imgs/home/home-page-02.jpg" alt="Home Product 2" class="h-full w-full object-cover object-center" asp-append-version="true"/>
                                     </div>
                                 </div>
                                 <div class="grid flex-shrink-0 grid-cols-1 gap-y-6 lg:gap-y-8">
                                     <div class="h-64 w-44 overflow-hidden rounded-lg">
-                                        <img loading="lazy" src="/imgs/home/home-page-06.jpg" alt="Home Product 6" class="h-full w-full object-cover object-center">
+                                        <img loading="lazy" src="~/imgs/home/home-page-03.jpg" alt="Home Product 3" class="h-full w-full object-cover object-center" asp-append-version="true"/>
                                     </div>
                                     <div class="h-64 w-44 overflow-hidden rounded-lg">
-                                        <img loading="lazy" src="/imgs/home/home-page-07.jpg" alt="Home Product 7" class="h-full w-full object-cover object-center">
+                                        <img loading="lazy" src="~/imgs/home/home-page-04.jpg" alt="Home Product 4" class="h-full w-full object-cover object-center" asp-append-version="true"/>
+                                    </div>
+                                    <div class="h-64 w-44 overflow-hidden rounded-lg">
+                                        <img loading="lazy" src="~/imgs/home/home-page-05.jpg" alt="Home Product 5" class="h-full w-full object-cover object-center" asp-append-version="true"/>
+                                    </div>
+                                </div>
+                                <div class="grid flex-shrink-0 grid-cols-1 gap-y-6 lg:gap-y-8">
+                                    <div class="h-64 w-44 overflow-hidden rounded-lg">
+                                        <img loading="lazy" src="~/imgs/home/home-page-06.jpg" alt="Home Product 6" class="h-full w-full object-cover object-center" asp-append-version="true"/>
+                                    </div>
+                                    <div class="h-64 w-44 overflow-hidden rounded-lg">
+                                        <img loading="lazy" src="~/imgs/home/home-page-07.jpg" alt="Home Product 7" class="h-full w-full object-cover object-center" asp-append-version="true"/>
                                     </div>
                                 </div>
                             </div>
