--- a/ui/storefront/Views/Shared/_Layout.cshtml
+++ b/ui/storefront/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <nav class="bg-white fixed w-full z-20 top-0 start-0 border-b border-gray-200">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a asp-area="" asp-controller="Home" asp-action="Index" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img loading="lazy" src="~/imgs/logo.png" class="h-8" alt="Rookie Shop">
+                <img loading="lazy" src="~/imgs/logo.png" class="h-8" alt="Rookie Shop" asp-append-version="true"/>
                 <span class="self-center text-2xl font-semibold whitespace-nowrap">Rookie Shop</span>
             </a>
             <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
@@ -72,7 +72,7 @@
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
         <div class="sm:flex sm:items-center sm:justify-between">
             <a asp-page="" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
-                <img loading="lazy" src="~/imgs/logo.png" class="h-8" alt="Rookie Shop"/>
+                <img loading="lazy" src="~/imgs/logo.png" class="h-8" alt="Rookie Shop" asp-append-version="true"/>
                 <span class="self-center text-2xl font-semibold whitespace-nowrap">Rookie Shop</span>
             </a>
         </div>
@@ -83,7 +83,7 @@
     </div>
 </footer>
 
-<script src="~/lib/dist/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/dist/jquery/dist/jquery.min.js" asp-append-version="true"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", false)
 
