--- a/ui/storefront/Views/Shared/Partials/Home/_NewsLetterPartial.cshtml
+++ b/ui/storefront/Views/Shared/Partials/Home/_NewsLetterPartial.cshtml
@@ -24,7 +24,7 @@
                 </div>
                 <div class="flex flex-col items-start">
                     <div class="rounded-md bg-white/5 p-2 ring-1 ring-white/10">
-                        <img loading="lazy" src="~/imgs/home/hand.svg" alt="Heart" class="h-6 w-6 text-white"/>
+                        <img loading="lazy" src="~/imgs/home/hand.svg" alt="Heart" class="h-6 w-6 text-white" asp-append-version="true"/>
                     </div>
                     <dt class="mt-4 font-semibold text-white">No spam</dt>
                     <dd class="mt-2 leading-7 text-gray-400">
