--- a/ui/storefront/Views/Shared/_PaginationPartial.cshtml
+++ b/ui/storefront/Views/Shared/_PaginationPartial.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Ardalis.Result.PagedInfo
 
 <div class="flex items-center gap-4 justify-center">
-    <button class="flex items-center gap-2 px-6 py-3 font-sans text-xs font-bold text-center text-gray-900 uppercase align-middle transition-all rounded-full select-none hover:bg-gray-900/10 active:bg-gray-900/20 disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none" type="button">
-        <img loading="lazy" class="w-4 h-4" src="/imgs/filter/previous.svg" alt="Previous" />
+    <a class="flex items-center gap-2 px-6 py-3 font-sans text-xs font-bold text-center text-gray-900 uppercase align-middle transition-all rounded-full select-none hover:bg-gray-900/10 active:bg-gray-900/20 disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none" type="button">
+        <img loading="lazy" class="w-4 h-4" src="/imgs/filter/previous.svg" alt="Previous" asp-append-version="true"/>
         Previous
-    </button>
+    </a>
     @for (var pageNumber = 1; pageNumber <= Model.TotalPages; pageNumber++)
     {
         <button class="relative h-10 max-h-[40px] w-10 max-w-[40px] select-none rounded-full text-center align-middle font-sans text-xs font-medium uppercase transition-all @(pageNumber == Model.PageNumber ? "hover:shadow-lg hover:shadow-gray-900/20 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none bg-gray-900 text-white shadow-md shadow-gray-900/10" : "hover:bg-gray-900/10 active:bg-gray-900/20 disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none text-gray-900")" type="button">
@@ -13,8 +13,8 @@
             </span>
         </button>
     }
-    <button class="flex items-center gap-2 px-6 py-3 font-sans text-xs font-bold text-center text-gray-900 uppercase align-middle transition-all rounded-full select-none hover:bg-gray-900/10 active:bg-gray-900/20 disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none" type="button">
+    <a class="flex items-center gap-2 px-6 py-3 font-sans text-xs font-bold text-center text-gray-900 uppercase align-middle transition-all rounded-full select-none hover:bg-gray-900/10 active:bg-gray-900/20 disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none" type="button">
         Next
-        <img loading="lazy" class="w-4 h-4" src="/imgs/filter/next.svg" alt="Next" />
-    </button>
+        <img loading="lazy" class="w-4 h-4" src="/imgs/filter/next.svg" alt="Next" asp-append-version="true"/>
+    </a>
 </div>
